--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,8 @@ main{
 
 #difficulty-select{
     padding: 6px 15px;
-    background-color: #306057;
+
+    background-color: #00a8e8;
 
     color: white;
 
@@ -76,9 +77,11 @@ main{
     border-radius: 20px;
     border-style: none;
 
-    box-shadow: 5px 5px 15px black;
-
     cursor: pointer;
+}
+
+.btns-container{
+    width: 13%;
 }
 
 #play-btn{
